# PCIC

./: .gitignore  README.md
GenAI/: EBM.ipynb  Ejercicios_vectores_matrices_tensores_con_NumPy1.ipynb  LeNet5_MNIST.ipynb  LeNet5_MNIST_mejor_configuracion.ipynb.ipynb  TLU_y_Perceptron.ipynb  backprop_TF_XOR.ipynb  ejercicios_diferenciacion_TensorFlow.ipynb  pyproject.toml  transfer_learning_ResNet50_CatsVsDogs.ipynb  vectorizacion.ipynb
GenAI/Autoencoders/: autoencoder_fashion_mnist_version1.ipynb  autoencoder_fashion_mnist_version2.ipynb
GenAI/CIFAR10/: cnn_cifar10_version1.ipynb  cnn_cifar10_version2_relu.ipynb  cnn_cifar10_version3_mas_capas.ipynb  cnn_cifar10_version4_aumento_datos.ipynb  cnn_cifar10_version5_norm_drop.ipynb
GenAI/Course/10. Autoencoders/: autoencoder_fashion_mnist_version1.ipynb  autoencoder_fashion_mnist_version2.ipynb  vae_faces.ipynb  vae_fashion_mnist.ipynb
GenAI/Course/11. Autoencoders II/: cvae_fashion_mnist.ipynb
GenAI/Course/13. GANs/: cgan.ipynb  dcgan.ipynb
GenAI/Course/14. DCGANs/: wgan_gp.ipynb
GenAI/Course/17. EBMs/: ebm.ipynb
GenAI/Course/19. Transformers/: gpt.ipynb
GenAI/Course/2. Fundamentos/: Ejercicios_vectores_matrices_tensores_con_NumPy1.ipynb  Ejercicios_vectores_matrices_tensores_con_NumPy2.ipynb
GenAI/Course/20. GPT/: gpt_listo_para_entrenar.ipynb
GenAI/Course/21. DALL_E/: DALLE2_Decoder_Kandinsky.ipynb
GenAI/DALLE2/: AgenteSecreto.ipynb  CLIP_Embeddings.ipynb  DALLE2_Decoder_Kandinsky.ipynb
GenAI/EBM/: EBM.ipynb  EBM2.ipynb
GenAI/Experimentos-MNIST/: mlp_CIFAR10_gris.ipynb  mlp_MNIST_traslaciones.ipynb
GenAI/GPT/: gpt.ipynb
GenAI/Introducción/: Ejercicios_vectores_matrices_tensores_con_NumPy2.ipynb  Tutorial_uso_tensores_con_numPy.ipynb  ejercicios_diferenciacion_TensorFlow.ipynb  vectorizacion.ipynb
GenAI/LeNet/: LeNet5_CIFAR10.ipynb  LeNet5_MNIST.ipynb  LeNet5_MNIST_mejor_configuracion.ipynb.ipynb
GenAI/MLP-CIFAR10/: practica_mlp.ipynb
GenAI/MLP-MNIST/: mlp.ipynb
GenAI/MusicTransformer/: README.md  app.py  app_utils.py  transformer.ipynb  transformer_utils.py
GenAI/MusicTransformer/latex/: comment.cut  (+8 more)
ML/Proyecto Final/: README.md  itslive-notebook.ipynb  main.py  pyproject.toml
NLP/: pyproject.toml
NLP/T1/: AS2.ipynb
NLP/T10/: AS1.ipynb  AS2.ipynb  AS3.ipynb
NLP/T14/: AS1.ipynb  AS2.md
NLP/T15/: AS1.ipynb
NLP/T16/: AS1.ipynb  resumenes.md
NLP/T3/: Porter.ipynb
NLP/T4/: AS2.ipynb
NLP/T5/: AS3.ipynb  AS3.pl
NLP/T6/: AS2.ipynb  cell-3.graphml  cell-3.html  cell-5.graphml  cell-5.html  dog-2.graphml  dog-2.html  dog-graph.html  dog.graphml
NLP/T7/: AS2.ipynb
NLP/T8/: AS2.ipynb
NLP/T9/: AS2.ipynb
(+95 files in other folders)
