[project]
name = "proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.6",
    "ipykernel>=6.29.5",
    "ipyleaflet>=0.19.2",
    "ipympl>=0.9.7",
    "markdown>=3.8",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pyproj>=3.7.1",
    "s3fs>=2025.5.0",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
    "watchdog>=6.0.0",
    "xarray>=2025.4.0",
    "zarr>=3.0.8",
]
